# ModeTrainer

./: .gitignore  CMakeLists.txt  ModeTrainer.icns  ModeTrainer.jucer  README.html  README.md
Source/: AboutDialog.h  AudioEngine.cpp  AudioEngine.h  CustomLookAndFeel.h  EmbeddedContent.h  EmbeddedMarkdown.h  Main.cpp  MainComponent.cpp  MainComponent.h  MarkdownConverter.cpp  MarkdownConverter.h
